appId: com.mayagwright20.ratemykitty
---
- launchApp:
    clearState: true
- tapOn: "http://localhost:8081"
- tapOn: "Close"
- assertVisible: ""
- assertVisible:
    id: "circular-btn-icon-wrapper"
- assertVisible: "UPLOAD, tab, 1 of 3"
- assertVisible: "FAVOURITES, tab, 3 of 3"
- assertVisible: "LIST"
- assertVisible: "0"
- tapOn: "LIST"
- assertVisible:
    point: 22%,0%
- assertVisible:
    point: 0%,0%
- assertVisible:
    point: 0%,-15%
- assertVisible: "UPLOAD, tab, 1 of 3"
- assertVisible:
    id: "circular-btn-icon-wrapper"
- assertVisible: "FAVOURITES, tab, 3 of 3"
- tapOn: "UPLOAD, tab, 1 of 3"
- assertVisible: "Submit Your Cat"
- assertVisible: "Upload a photo of your cat to put them in the vote!"
- assertVisible: ", Tap to upload, Pick your best cat picture!"
- assertVisible: ", SUBMIT"
- tapOn: ", Tap to upload, Pick your best cat picture!"
- tapOn: "Photo, 30 March 2018, 20:14"
- tapOn: "Choose"
- assertVisible:
    point: 83%,28%
- assertVisible:
    point: 43%,14%
- assertVisible:
    point: -7%,50%
- assertVisible:
    point: 87%,55%
- assertVisible: ", Edit photo, Pick your best cat picture!"
- assertVisible: ", SUBMIT"
- tapOn: ", SUBMIT"
- assertVisible: "*Classifcation failed: correct animal not found. \n   Please try again"
- tapOn: ", Edit photo, Pick your best cat picture!"
- tapOn: "Photo, 21 July, 20:27"
- tapOn: "Choose"
- assertVisible:
    point: 5%,18%
- tapOn: ", SUBMIT"
- assertVisible:
    point: 0%,0%
- assertVisible:
    point: 4%,27%
- assertVisible: "Up vote cat"
- assertVisible:
    point: 21%,41%
- assertVisible: "Down vote cat"
- assertVisible: ""
- assertVisible:
    point: 4%,27%
- tapOn: "Up vote cat"
- assertVisible:
    text: "1"
    index: 1
- tapOn: ""
- tapOn: "FAVOURITES, tab, 3 of 3"
- tapOn:
    point: 4%,20%
- assertVisible: "1"
- tapOn: "Down vote cat"
- assertVisible: "0"
- assertVisible: "Favourites"
- tapOn: ""
- tapOn: ""
- assertVisible: "Submit Your Cat"



